# sequencer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  records.xdlmaorofl
actions/: actions.c  actions.h
input/: input.c  input.h
io/: io.c  io.h
logger/: logger.c  logger.h
record/: record.c  record.h
recorder/: recorder.c  recorder.h
src/: main.c
src/helper/: helper.c  helper.h
src/input/: input.c
src/io/: io.c  io.h
src/record/: record.c  record.h
src/recorder/: recorder.h
src/threads/: threads.c  threads.h
src/window/: window.c  window.h
